<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/dataset_update_preferences">

        <SwitchPreference
            android:key="dataset_update"
            android:title="@string/pref_title_dataset_update"
            android:summary="@string/pref_description_dataset_update"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="dataset_check"
            android:title="@string/pref_title_dataset_check"
            android:summary="@string/pref_description_dataset_check"
            android:defaultValue="true" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:key="dataset_url_location"
            android:title="@string/pref_title_dataset_url_location"
            android:defaultValue="@string/pref_defaul_dataset_url_location"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/behavior_wait_voice_preferences">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:key="behavior_wait_voice"
            android:title="@string/pref_title_behavior_wait_voice"
            android:defaultValue="1"
            android:entries="@array/pref_list_behavior_wait_voice"
            android:entryValues="@array/pref_value_behavior_wait_voice"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

    </PreferenceCategory>

</PreferenceScreen>